fixed spacing of alt markers

--- a/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_VSD.css
+++ b/html_ui/Pages/VCockpit/Instruments/Airliners/B787_10/MFD/B787_10_VSD.css
@@ -9,42 +9,47 @@ body {
         height: auto;
         background: gray;
         position: absolute;
-        z-index: 5000;
+        z-index: 50;
         color: white;
 
 }
 
 #currentAlt {
     position: fixed;
-    top: 2px;
+    top: 0px;
+    width: 3cm;
+    height: 60px;
     color: magenta;
-    margin-top: 10px;
+    background-color: black;
     font-size: large;
-    padding: 3px;
-    margin-bottom: 3px;
+
+    z-index: 110;
 
 }
 #altitude1 {
-    margin-bottom: 5cm;
+    margin-top: 21px;
+    margin-bottom: 167px;
     
 }
 #altitude2 {
-    margin-bottom: 5cm;
+    margin-top: 21px;
+    margin-bottom: 190px;
     
 }
 #altitude3 {
-    margin-bottom: 5cm;
-    
+    margin-top: 21px;
+    margin-bottom: 189px;
+   
 }
 #altitude4 {
-    margin-bottom: 5cm;
+    margin-bottom: 189px;
     
 }
 
 #altMrk1 {
     position: absolute;
     right: 0px;
-    top: 10px;
+    top: 30px;
     height: 1.5px;
     width: 20px;
     background-color: white;
